Fixed Text Wrap and Scroll Issues and added additional functionality.

--- a/css/main.css
+++ b/css/main.css
@@ -6,6 +6,10 @@ button{
   float: right;
 }
 
+ul {
+  white-space: pre-wrap;
+}
+
 #outerDiv{
   position: absolute;
   top: 50%;
@@ -14,22 +18,17 @@ button{
   background-color: #AFF8DB;
   padding: 50px;
   border-radius: 5%;
+  max-height:80vh; /*example*/
+  overflow: scroll;
 }
 
-.addBtn{
-  text-decoration: none;
-  background-color: #6bf9df;
-  color: #333333;
-  padding: 2px 6px 2px 6px;
-  border-top: 1px solid #CCCCCC;
-  border-right: 1px solid #333333;
-  border-bottom: 1px solid #333333;
-  border-left: 1px solid #CCCCCC;
-  border-radius: 8px;
+.fa-plus-circle{
+  font-size: 25px;
+  color: black;
 }
 
-.addBtn:hover{
-  background-color: #46a594;
+.fa-plus-circle:hover{
+  color: gray;
 }
 
 .entyList{
